updates to links, spelling, and an added pic

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Student Bio</title>
+    <title>Contact</title>
     <!--Almost all projects use external css style sheets.  Just do it.-->
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
@@ -17,13 +17,13 @@
                 Matthew McDonald</div>
             <div class=spacer2></div>
             <div class="top-contact">
-                <a href="# ">Contact</a>
+                <a href="Contact.html">Contact</a>
             </div>
             <div class="top-portfolio">
-                <a href="# ">Portfolio</a>
+                <a href="Portfolio.html">Portfolio</a>
             </div>
             <div class="top-about">
-                <a href="# ">About</a>
+                <a href="index.html">About</a>
             </div>
 
         </header>
