--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
                 Matthew McDonald</div>
             <div class=spacer2></div>
             <div class="top-contact">
-                <a href="# ">Contact</a>
+                <a href="Contact.html">Contact</a>
             </div>
             <div class="top-portfolio">
-                <a href="# ">Portfolio</a>
+                <a href="Portfolio.html">Portfolio</a>
             </div>
             <div class="top-about">
-                <a href="# ">About</a>
+                <a href="index.html">About</a>
             </div>
 
         </header>
