--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Student Bio</title>
+    <title>Portfolio</title>
     <!--Almost all projects use external css style sheets.  Just do it.-->
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
@@ -17,13 +17,13 @@
                 Matthew McDonald</div>
             <div class=spacer2></div>
             <div class="top-contact">
-                <a href="# ">Contact</a>
+                <a href="Contact.html">Contact</a>
             </div>
             <div class="top-portfolio">
-                <a href="# ">Portfolio</a>
+                <a href="Portfolio.html">Portfolio</a>
             </div>
             <div class="top-about">
-                <a href="# ">About</a>
+                <a href="index.html">About</a>
             </div>
 
         </header>
@@ -34,14 +34,16 @@
 
                 <h2 class=header-font> Portfolio</h2>
                 <div class=box-set>
-                    <img class="box" src="images/Boeing_B-52_STRATOFORTRESS.png" alt="Matthew McDonald ">
-                    <img class="box-1" src="images/C-130B_Hercules.png" alt="Matthew McDonald">
-                    <img class="box-2" src="images/P-51D_Mustang.png" alt="Matthew McDonald">
-                    <img class="box-3" src="images/SR-71A_Blackbird__2.png" alt="Matthew McDonald">
+                    <img class="box" src="images/Boeing_B-52_STRATOFORTRESS.png" alt="B-52 image">
+                    <img class="box-1" src="images/C-130B_Hercules.png" alt="C-130B image">
+                    <img class="box-2" src="images/P-51D_Mustang.png" alt="P-51D imgage">
+                    <img class="box-3" src="images/SR-71A_Blackbird__2.png" alt="SR-71 image">
+                    <img class="box-4" src="images/round_door.jpg">
                     <div class="box-label">Hangman</div>
                     <div class="box-label-1">Trivia Game</div>
                     <div class="box-label-2">RPG Game</div>
-                    <div class="box-label-3">Ritgers Info Widget</div>
+                    <div class="box-label-3">Pioneer Info Widget</div>
+                    <div class="box-label-4">Build a Round Door</div>
                 </div>
                 <!--<a href="http://www.lipsum.com/ ">www.lipsum.com</a>-->
             </div>
