--- a/contact.html
+++ b/contact.html
@@ -17,10 +17,10 @@
                 Matthew McDonald</div>
             <div class=spacer2></div>
             <div class="top-contact">
-                <a href="Contact.html">Contact</a>
+                <a href="contact.html">Contact</a>
             </div>
             <div class="top-portfolio">
-                <a href="Portfolio.html">Portfolio</a>
+                <a href="portfolio.html">Portfolio</a>
             </div>
             <div class="top-about">
                 <a href="index.html">About</a>
